# MyCoolDB

./: .gitignore  CMakeLists.txt  README.md
lib/: BaseColumn.h  CMakeLists.txt  Column.h  Element.h  ExceptionDB.h  MyCoolDB.cpp  MyCoolDB.h  ResultSet.cpp  ResultSet.h  SqlException.h  SqlQuery.cpp  SqlQuery.h  Table.cpp  Table.h
lib/include/: BaseColumn.h  Column.h  Element.h  MyCoolDB.h  ResultSet.h  Table.h
lib/src/: BaseColumn.cpp  Column.cpp  MyCoolDB.cpp  ResultSet.cpp  SqlQuery.cpp  Table.cpp
tests/: db_tests.cpp
